[gd_scene load_steps=59 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/player/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/damage.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/blaster.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/deathSound.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Actors/Gun.gd" type="Script" id=9]

[sub_resource type="Animation" id=43]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 16 ]
}

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=44]
resource_name = "death"
length = 1.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_screen"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=45]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=46]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "falling"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "falling_weapon"

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle_weapon"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jumping"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "jumping_weapon"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run_weapon"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=40]
states/death/node = SubResource( 46 )
states/death/position = Vector2( 1.94099, 179.832 )
states/falling/node = SubResource( 12 )
states/falling/position = Vector2( 794, 114 )
states/falling_weapon/node = SubResource( 13 )
states/falling_weapon/position = Vector2( 821, 21 )
states/hurt/node = SubResource( 47 )
states/hurt/position = Vector2( 310.941, 248.152 )
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 188, 114 )
states/idle_weapon/node = SubResource( 15 )
states/idle_weapon/position = Vector2( 217, 21 )
states/jumping/node = SubResource( 16 )
states/jumping/position = Vector2( 385, 114 )
states/jumping_weapon/node = SubResource( 17 )
states/jumping_weapon/position = Vector2( 417, 21 )
states/run/node = SubResource( 18 )
states/run/position = Vector2( 566, 114 )
states/run_weapon/node = SubResource( 19 )
states/run_weapon/position = Vector2( 614, 21 )
transitions = [ "idle", "idle_weapon", SubResource( 20 ), "idle_weapon", "idle", SubResource( 21 ), "idle_weapon", "falling_weapon", SubResource( 22 ), "falling_weapon", "idle_weapon", SubResource( 23 ), "idle_weapon", "run_weapon", SubResource( 24 ), "run_weapon", "idle_weapon", SubResource( 25 ), "idle_weapon", "jumping_weapon", SubResource( 26 ), "jumping_weapon", "idle_weapon", SubResource( 27 ), "idle", "run", SubResource( 28 ), "run", "idle", SubResource( 29 ), "idle", "jumping", SubResource( 30 ), "jumping", "idle", SubResource( 31 ), "idle", "falling", SubResource( 32 ), "falling", "idle", SubResource( 33 ), "jumping", "jumping_weapon", SubResource( 34 ), "jumping_weapon", "jumping", SubResource( 35 ), "run", "run_weapon", SubResource( 36 ), "run_weapon", "run", SubResource( 37 ), "falling", "falling_weapon", SubResource( 38 ), "falling_weapon", "falling", SubResource( 39 ), "idle", "hurt", SubResource( 48 ), "hurt", "idle", SubResource( 49 ), "idle", "death", SubResource( 50 ), "run", "hurt", SubResource( 52 ), "hurt", "run", SubResource( 53 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( -237.059, -37.392 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=41]

[sub_resource type="CircleShape2D" id=51]
radius = 28.0179

[sub_resource type="CapsuleShape2D" id=42]
radius = 14.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 1 )
speed = Vector2( 300, 700 )
gravity = 1800.0

[node name="ShootAnimation" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 8

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -28 )
texture = ExtResource( 2 )
hframes = 16
vframes = 2
frame = 16

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 30.6589, 6.13176 )
script = ExtResource( 9 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sprite/Gun"]
position = Vector2( -30.6589, -6.13176 )
stream = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="Sprite/Gun"]
process_mode = 0
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.6
anims/RESET = SubResource( 43 )
anims/crouch = SubResource( 1 )
anims/death = SubResource( 44 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/hurt = SubResource( 45 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 40 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 41 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
process_mode = 0
limit_bottom = 550
limit_smoothed = true

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( -2, -25 )
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -5, -3 )
shape = SubResource( 51 )

[node name="Damage" type="AudioStreamPlayer2D" parent="Hurtbox"]
position = Vector2( -5, -3 )
stream = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, -24 )
shape = SubResource( 42 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 12.638

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
